cfn_benchmark/cfn_templates/Tianyi2__IRIS/data/cloudformation_collected_templates_new/template_05395_custom_vpc.json
{
    "Outputs": {
        "AppSubnets": {
            "Value": {
                "Fn::Join": [
                    ",",
                    [
                        {
                            "Ref": "AppSubnet0"
                        },
                        {
                            "Ref": "AppSubnet1"
                        },
                        {
                            "Ref": "AppSubnet2"
                        }
                    ]
                ]
            }
        },
        "AvailabilityZones": {
            "Value": {
                "Fn::Join": [
                    ",",
                    [
                        {
                            "Fn::Select": [
                                0,
                                {
                                    "Fn::GetAZs": ""
                                }
                            ]
                        },
                        {
                            "Fn::Select": [
                                1,
                                {
                                    "Fn::GetAZs": ""
                                }
                            ]
                        },
                        {
                            "Fn::Select": [
                                2,
                                {
                                    "Fn::GetAZs": ""
                                }
                            ]
                        }
                    ]
                ]
            }
        },
        "CIDR": {
            "Value": "10.128.0.0/16"
        },
        "DBSubnets": {
            "Value": {
                "Fn::Join": [
                    ",",
                    [
                        {
                            "Ref": "DBSubnet0"
                        },
                        {
                            "Ref": "DBSubnet1"
                        },
                        {
                            "Ref": "DBSubnet2"
                        }
                    ]
                ]
            }
        },
        "VpcId": {
            "Value": {
                "Ref": "VPC"
            }
        },
        "WebSubnets": {
            "Value": {
                "Fn::Join": [
                    ",",
                    [
                        {
                            "Ref": "WebSubnet0"
                        },
                        {
                            "Ref": "WebSubnet1"
                        },
                        {
                            "Ref": "WebSubnet2"
                        }
                    ]
                ]
            }
        }
    },
    "Resources": {
        "AppRouteTable0": {
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::RouteTable"
        },
        "AppRouteTable1": {
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::RouteTable"
        },
        "AppRouteTable2": {
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::RouteTable"
        },
        "AppRouteTableAssociation0": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "AppRouteTable0"
                },
                "SubnetId": {
                    "Ref": "AppSubnet0"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "AppRouteTableAssociation1": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "AppRouteTable1"
                },
                "SubnetId": {
                    "Ref": "AppSubnet1"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "AppRouteTableAssociation2": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "AppRouteTable2"
                },
                "SubnetId": {
                    "Ref": "AppSubnet2"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "AppSubnet0": {
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.128.10.0/24",
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "AppSubnet1": {
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        1,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.128.11.0/24",
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "AppSubnet2": {
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        2,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.128.12.0/24",
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "AppSubnetDefaultRoute0": {
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "WebNatGateway0"
                },
                "RouteTableId": {
                    "Ref": "AppRouteTable0"
                }
            },
            "Type": "AWS::EC2::Route"
        },
        "AppSubnetDefaultRoute1": {
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "WebNatGateway1"
                },
                "RouteTableId": {
                    "Ref": "AppRouteTable1"
                }
            },
            "Type": "AWS::EC2::Route"
        },
        "AppSubnetDefaultRoute2": {
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "WebNatGateway2"
                },
                "RouteTableId": {
                    "Ref": "AppRouteTable2"
                }
            },
            "Type": "AWS::EC2::Route"
        },
        "DBRouteTable0": {
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::RouteTable"
        },
        "DBRouteTable1": {
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::RouteTable"
        },
        "DBRouteTable2": {
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::RouteTable"
        },
        "DBRouteTableAssociation0": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "DBRouteTable0"
                },
                "SubnetId": {
                    "Ref": "DBSubnet0"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "DBRouteTableAssociation1": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "DBRouteTable1"
                },
                "SubnetId": {
                    "Ref": "DBSubnet1"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "DBRouteTableAssociation2": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "DBRouteTable2"
                },
                "SubnetId": {
                    "Ref": "DBSubnet2"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "DBSubnet0": {
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.128.20.0/24",
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "DBSubnet1": {
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        1,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.128.21.0/24",
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "DBSubnet2": {
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        2,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.128.22.0/24",
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "DBSubnetDefaultRoute0": {
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "WebNatGateway0"
                },
                "RouteTableId": {
                    "Ref": "DBRouteTable0"
                }
            },
            "Type": "AWS::EC2::Route"
        },
        "DBSubnetDefaultRoute1": {
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "WebNatGateway1"
                },
                "RouteTableId": {
                    "Ref": "DBRouteTable1"
                }
            },
            "Type": "AWS::EC2::Route"
        },
        "DBSubnetDefaultRoute2": {
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "WebNatGateway2"
                },
                "RouteTableId": {
                    "Ref": "DBRouteTable2"
                }
            },
            "Type": "AWS::EC2::Route"
        },
        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway"
        },
        "InternetGatewayAttachment": {
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                },
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::VPCGatewayAttachment"
        },
        "VPC": {
            "Properties": {
                "CidrBlock": "10.128.0.0/16",
                "EnableDnsHostnames": "true",
                "Tags": [
                    {
                        "Key": "tag1",
                        "Value": "value1"
                    },
                    {
                        "Key": "tag2",
                        "Value": "value2"
                    }
                ]
            },
            "Type": "AWS::EC2::VPC"
        },
        "WebNatGateway0": {
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "WebNatGatewayEIP0",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "WebSubnet0"
                }
            },
            "Type": "AWS::EC2::NatGateway"
        },
        "WebNatGateway1": {
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "WebNatGatewayEIP1",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "WebSubnet1"
                }
            },
            "Type": "AWS::EC2::NatGateway"
        },
        "WebNatGateway2": {
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "WebNatGatewayEIP2",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "WebSubnet2"
                }
            },
            "Type": "AWS::EC2::NatGateway"
        },
        "WebNatGatewayEIP0": {
            "Properties": {
                "Domain": "vpc"
            },
            "Type": "AWS::EC2::EIP"
        },
        "WebNatGatewayEIP1": {
            "Properties": {
                "Domain": "vpc"
            },
            "Type": "AWS::EC2::EIP"
        },
        "WebNatGatewayEIP2": {
            "Properties": {
                "Domain": "vpc"
            },
            "Type": "AWS::EC2::EIP"
        },
        "WebRouteTable": {
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::RouteTable"
        },
        "WebRouteTableAssociation0": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "WebRouteTable"
                },
                "SubnetId": {
                    "Ref": "WebSubnet0"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "WebRouteTableAssociation1": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "WebRouteTable"
                },
                "SubnetId": {
                    "Ref": "WebSubnet1"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "WebRouteTableAssociation2": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "WebRouteTable"
                },
                "SubnetId": {
                    "Ref": "WebSubnet2"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "WebSubnet0": {
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.128.0.0/24",
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "WebSubnet1": {
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        1,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.128.1.0/24",
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "WebSubnet2": {
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        2,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.128.2.0/24",
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "WebSubnetDefaultRoute": {
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                },
                "RouteTableId": {
                    "Ref": "WebRouteTable"
                }
            },
            "Type": "AWS::EC2::Route"
        }
    }
}
